unpackaged/main/default/objects/Weekly_Cash_Balances__c/Weekly_Cash_Balances__c.object-meta.xml
<CustomObject>
    <label>Weekly Cash Balance</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Weekly Cash Balances  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Cash Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>