unpackaged/main/default/objects/Weekly_Cash_Balances__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>