unpackaged/main/default/objects/Weekly_Cash_Balances__c/fields/Currency_Account__c.field-meta.xml
<CustomField>
    <fullName>Currency_Account__c</fullName>
    <label>Currency Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOSE CURRENT ACCOUNT</fullName>
            </value>
            <value>
                <fullName>HSBC GBP</fullName>
            </value>
            <value>
                <fullName>HSBC EURO</fullName>
            </value>
            <value>
                <fullName>HSBC SEK</fullName>
            </value>
            <value>
                <fullName>HSBC US$</fullName>
            </value>
            <value>
                <fullName>CLOSE_EURO</fullName>
                <label>CLOSE - EURO</label>
            </value>
            <value>
                <fullName>INPUT FOR CFLOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>