unpackaged/main/default/objects/Weekly_Cash_Balances__c/fields/Date_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry__c</fullName>
    <label>Date Entry</label>
    <type>Date</type>
</CustomField>