unpackaged/main/default/objects/Weekly_Cash_Balances__c/fields/GBP_Value__c.field-meta.xml
<CustomField>
    <fullName>GBP_Value__c</fullName>
    <formula>Value__c / Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>