unpackaged/main/default/objects/Weekly_Cash_Balances__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Future Billings @ 65% (Close)</fullName>
            </value>
            <value>
                <fullName>Collections at 35%</fullName>
            </value>
            <value>
                <fullName>Customer Receipt</fullName>
            </value>
            <value>
                <fullName>Dassault Payment</fullName>
            </value>
            <value>
                <fullName>Supplier Payment</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>PAYE</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>Deferred VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>