unpackaged/main/default/objects/Weekly_Cash_Balances__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_Entry__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Value__c</columns>
    <columns>GBP_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>